--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Market</string>
-    <string name="Market">Market</string>
+    <string name="Market">Super Market</string>
     <string name="UserName">User Name</string>
     <string name="Password">Password</string>
     <string name="NotAMemberQuestion"><u>Not a Member?</u></string>
