--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="Delivery">Delivery</string>
     <string name="Worker">Worker</string>
     <string name="slogan">Set your hours. Deliver. Get paid. With Grubhub, it is easy to earn competitive pay Get car decals warming bags and more from Grubhub or use your own</string>
+    <string name="SubTotal">Sub Total</string>
 </resources>
