* Firebase Database created * Implemented customer registration method with database insertion * Login method implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="Worker">Worker</string>
     <string name="slogan">Set your hours. Deliver. Get paid. With Grubhub, it is easy to earn competitive pay Get car decals warming bags and more from Grubhub or use your own</string>
     <string name="SubTotal">Sub Total</string>
+    <string name="nic">NIC</string>
 </resources>
