--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="slogan">Set your hours. Deliver. Get paid. With Grubhub, it is easy to earn competitive pay Get car decals warming bags and more from Grubhub or use your own</string>
     <string name="SubTotal">Sub Total</string>
     <string name="nic">NIC</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
