* Added some changes in interfaces

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Market</string>
-    <string name="Market">Super Market</string>
+    <string name="Market">Market</string>
     <string name="UserName">User Name</string>
     <string name="Password">Password</string>
     <string name="NotAMemberQuestion"><u>Not a Member?</u></string>
@@ -23,9 +23,6 @@
     <string name="slogan">Set your hours. Deliver. Get paid. With Grubhub, it is easy to earn competitive pay Get car decals warming bags and more from Grubhub or use your own</string>
     <string name="SubTotal">Sub Total</string>
     <string name="nic">NIC</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="btnSave">SAVE</string>
     <string name="btnEdit">EDIT</string>
 
@@ -95,6 +92,9 @@
     <string name="showdetailsdiliver">SHOW DETAILS</string>
     <string name="updatedetailsdiliver">UPDATE ACCOUNT</string>
     <string name="deletediliver">DELETE ACCOUNT</string>
+    <string name="order">PLACE ORDER</string>
+    <string name="itemNo">Item No</string>
+    <string name="itemDescription">Item Description</string>
 
 
 </resources>
