nangi ge changes of admin part

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,8 @@
 
     <!--*******admin dash.XML Srings********-->
     <string name="fruit">Fruits</string>
+    <string name="button4">Fish n Meat</string>
+
 
     <!--*******************************************kusal**********************************************************-->
 
